--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,12 +8,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Attendanceandroid">
+        android:theme="@style/Theme.Attendance">
         <activity
-            android:name=".MainActivity"
+            android:name="com.yapp.presentation.ui.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Attendanceandroid.NoActionBar">
+            android:theme="@style/Theme.Attendance.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
