--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,18 @@
         <activity
             android:name="com.yapp.presentation.ui.login.LoginActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.Attendance.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name="com.yapp.presentation.ui.member.main.QRMainActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Attendance.NoActionBar">
         </activity>
 
         <activity
