--- a/.github/workflows/firebase_deploy.yaml
+++ b/.github/workflows/firebase_deploy.yaml
@@ -24,9 +24,9 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
-#     - name: upload artifact to Firebase App Distribution
-#       uses: wzieba/Firebase-Distribution-Github-Action@v1
-#       with:
-#         appId: ${{secrets.FIREBASE_APP_ID}}
-#         token: ${{secrets.FIREBASE_TOKEN}}
-#         file: app/build/outputs/apk/release/app-release-unsigned.apk
+    - name: upload artifact to Firebase App Distribution
+      uses: wzieba/Firebase-Distribution-Github-Action@v1
+      with:
+        appId: ${{secrets.FIREBASE_APP_ID}}
+        token: ${{secrets.FIREBASE_TOKEN}}
+        file: app/build/outputs/apk/release/app-release-unsigned.apk
