--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.yapp.attendance">
 
+    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -26,7 +27,7 @@
         <activity
             android:name="com.yapp.presentation.ui.MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.Attendance.NoActionBar"/>
+            android:theme="@style/Theme.Attendance.NoActionBar" />
 
         <activity
             android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
