--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         <activity
             android:name="com.yapp.presentation.ui.MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.Attendance.NoActionBar">
+            android:theme="@style/Theme.Attendance.NoActionBar"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
