Feature/implement qr scan (#58)
* feat: implement qr code scanner

* design: add qr inform text

* design: arrange component

* refactor: follow convention and rename some variable

* refactor: rename qr code scanner package

* refactor: change nav controller parameter to ramda expression

change navController parameter to ramda expression
delete comment
delete log

* test

* Update presentation/src/main/java/com/yapp/presentation/ui/member/qrcodescanner/QrCodeScanner.kt

Co-authored-by: YeongSang Jeon <53253298+toastmeister1@users.noreply.github.com>

* refactor: separate request permission logic

* fix: request permission and show scanner view

Co-authored-by: jsh-me <ppm_it@naver.com>
Co-authored-by: YeongSang Jeon <53253298+toastmeister1@users.noreply.github.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.yapp.attendance">
 
+    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -39,6 +40,11 @@
                     android:scheme="kakao72806b8322ff87c0ab3ec377e4f99e6a" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name="com.yapp.presentation.util.permission.PermissionActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Attendance.NoActionBar" />
     </application>
 
 </manifest>
