feat: 개인정보 처리방침 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Attendance">
+        android:theme="@style/Theme.Attendance"
+        android:usesCleartextTraffic="true">
         <activity
             android:name="com.yapp.presentation.ui.MainActivity"
             android:exported="true"
