fix: git이 keystore를 ignore하게끔 수정

--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,4 @@ fabric.properties
 !/gradle/wrapper/gradle-wrapper.jar
 
 # End of https://www.toptal.com/developers/gitignore/api/androidstudio,macos
+yapp_attendance_keystore
