키보드 전환 시 버튼 이동 방식 패딩으로 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:name="com.yapp.presentation.ui.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.Attendance.NoActionBar"
-            android:windowSoftInputMode="adjustResize">
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
