--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         <activity
             android:name="com.yapp.presentation.ui.MainActivity"
             android:exported="true"
+            android:screenOrientation="portrait"
             android:theme="@style/Theme.Attendance.NoActionBar"
             android:windowSoftInputMode="adjustResize">
             <intent-filter>
