fix: "kakao"와 네이티브 API키를 분리

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
                 <!-- Redirect URI: "kakao{NATIVE_APP_KEY}://oauth" -->
                 <data
                     android:host="oauth"
-                    android:scheme="${KAKAO_NATIVE_API_KEY}" />
+                    android:scheme="kakao${KAKAO_NATIVE_API_KEY}" />
             </intent-filter>
         </activity>
 
