--- a/.github/auto_assign.yml
+++ b/.github/auto_assign.yml
@@ -6,12 +6,11 @@ addAssignees: author
 
 # A list of reviewers to be added to pull requests (GitHub user name)
 reviewers: 
-  - jsh-me
-  - junieberry
-  - LuvJoy
-  - jionchu
+  - taeseongyun
+  - toastmeister1
   - jihee-dev
+  - hoyahozz
 
 # A number of reviewers added to the pull request
 # Set 0 to add all the reviewers (default: 0)
-numberOfReviewers: 1
+numberOfReviewers: 3
