--- a/.gitignore
+++ b/.gitignore
@@ -143,3 +143,5 @@ fabric.properties
 
 # End of https://www.toptal.com/developers/gitignore/api/androidstudio,macos
 yapp_attendance_keystore
+.github/api-play-store-key.json
+fastlane/.env
