[ Feature ] : pr이 머지가 되어있는지 체크 구문 추가

--- a/.github/workflows/attandace-cd.yml
+++ b/.github/workflows/attandace-cd.yml
@@ -1,4 +1,4 @@
-name: Android CI
+name: Android CD
 
 on:
   workflow_dispatch:
@@ -8,8 +8,9 @@ on:
 
 jobs:
   if_merged:
-    build:
 
+    if: github.event.pull_request.merged == true
+    build:
       runs-on: ubuntu-latest
     
       env:
