[ Feature ] : step 섹션 리스트 항목 추가
run -> -name , run 추가

--- a/.github/workflows/attandace-cd.yml
+++ b/.github/workflows/attandace-cd.yml
@@ -12,8 +12,8 @@ jobs:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
-      run: |
-        echo PR merged 
+      - name: PR merged
+        run: echo "PR merged"
 
   checkout:
     needs: if_merged
