[ Feature ] : commit-message runs-on 섹션 추가

--- a/.github/workflows/attandace-cd.yml
+++ b/.github/workflows/attandace-cd.yml
@@ -55,6 +55,7 @@ jobs:
 
   commit-message:
     needs: check_pr_labels
+    runs-on: ubuntu-latest
     outputs:
       message: ${{steps.get_pull_request_last_comment.output.COMMENT}}
     steps:
