[ Feature ] : 깃허브 액션 Output 변수명 수정

--- a/.github/workflows/check_pr_label.yml
+++ b/.github/workflows/check_pr_label.yml
@@ -12,7 +12,7 @@ jobs:
   check_pr_label:
     runs-on: ubuntu-latest
     outputs:
-      debug: ${{steps.check_pr_label.outputs.DEBUG}}
+      debug: ${{steps.check_pr_label.outputs.APP-DESTRIBUTION-DEBUG}}
     steps:
       - id: check_pr_label
         name: check_pr_label
