--- a/.github/workflows/attandace-cd.yml
+++ b/.github/workflows/attandace-cd.yml
@@ -77,12 +77,15 @@ jobs:
     needs: commit-message
     runs-on: ubuntu-latest
     steps:
-      - id: ruby-setup
       - uses: actions/checkout@v3
-      - uses: ruby/setup-ruby@v1
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@ec02537da5712d66d4d50a0f33b7eb52773b5ed1
         with:
-          ruby-version: '3.0' # Not needed with a .ruby-version file
+          ruby-version: '3.1'
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+      - name: Install dependencies
+        run: bundle install
+
 
   build_debug:
     if: ${{ needs.check_pr_labels.outputs.debug }}
