[ Feature ] : 깃허브 액션 cd 로직 gem install fastlane 섹션 추가

--- a/.github/workflows/attandace-cd.yml
+++ b/.github/workflows/attandace-cd.yml
@@ -77,5 +77,8 @@ jobs:
     needs: commit-message
     runs-on: ubuntu-latest
     steps:
+      - name: Install fastlane
+        run: gem install fastlane
+        
       - name: Fastlane debug
         run: fastlane distribute_debug "message:${{ needs.commit_message.outputs.message }}" --env common
