[ Feature ] : 패스트 레인 디렉토리 추가

--- a/.github/workflows/attandace-cd.yml
+++ b/.github/workflows/attandace-cd.yml
@@ -85,3 +85,4 @@ jobs:
 
       - name: Fastlane debug
         run: fastlane distribute_debug "message:${{ needs.commit_message.outputs.message }}" --env common
+        working-directory: ${{ github.workspace }}/fastlane
