--- a/.github/workflows/attandace-cd.yml
+++ b/.github/workflows/attandace-cd.yml
@@ -83,6 +83,9 @@ jobs:
       - name: Add gem binary directory to PATH
         run: echo "export PATH=\$HOME/.gem/ruby/3.0.0/bin:\$PATH" >> $GITHUB_ENV
 
+      - name: Fastlane setup
+        run: fastlane init
+
       - name: Fastlane debug
         run: fastlane distribute_debug "message:${{ needs.commit_message.outputs.message }}" --env common
         working-directory: ${{ github.workspace }}/fastlane
