--- a/.github/workflows/attandace-cd.yml
+++ b/.github/workflows/attandace-cd.yml
@@ -84,8 +84,8 @@ jobs:
         run: echo "export PATH=\$HOME/.gem/ruby/3.0.0/bin:\$PATH" >> $GITHUB_ENV
 
       - name: Fastlane setup
-        run: fastlane init
+        run: cd ${{ github.workspace }}/attendance-android && fastlane init
 
       - name: Fastlane debug
         run: fastlane distribute_debug "message:${{ needs.commit_message.outputs.message }}" --env common
-        working-directory: ${{ github.workspace }}/fastlane
+        working-directory: ${{ github.workspace }}/attendance-android/fastlane
