--- a/.github/workflows/attandace-cd.yml
+++ b/.github/workflows/attandace-cd.yml
@@ -38,10 +38,7 @@ jobs:
         
         # 구글 스토어 json 키값 파일 만듦
         echo PLAY_STORE_API_KEY=\"$PLAY_STORE_API_KEY\" >> ./.github/api-play-store-key.json
-        
-        # fastlane evn 파일 만듦
-        echo FASTLANE_ENV=\"$FASTLANE_ENV\" >> ./fastlane/.env
-        
+
       working-directory: ${{ env.working-directory }}
 
     - name: Grant execute permission for gradlew
@@ -85,7 +82,14 @@ jobs:
 
       - name: Fastlane setup
         run: fastlane init
-        working-directory: ./
+
+      - name: Make env file
+        run: |
+          # fastlane evn 파일 만듦
+          echo FASTLANE_ENV=\"$FASTLANE_ENV\" >> ./fastlane/.env
+
+      - name: Install Firebase app distribution plugin
+        run: fastlane add_plugin firebase_app_distribution
 
       - name: Fastlane debug
         run: fastlane distribute_debug "message:${{ needs.commit_message.outputs.message }}" --env common
