--- a/.github/workflows/attandace-cd.yml
+++ b/.github/workflows/attandace-cd.yml
@@ -80,11 +80,20 @@ jobs:
       - name: Add gem binary directory to PATH
         run: echo "export PATH=\$HOME/.gem/ruby/3.0.0/bin:\$PATH" >> $GITHUB_ENV
 
-      - name: Fastlane setup
-        run: fastlane init
-
       - name: Make env file
         run: |
+          # fastlane 디렉토리 추가
+          mkdir ./fastlane
+          
+          # fastlane fastfile
+          echo FASTLANE_FASTFILE=\"$FASTLANE_FASTFILE\" >> ./fastlane/Fastfile
+          
+          # fastlane pluginfile
+          echo FASTLANE_PLUGIN_FILE=\"$FASTLANE_PLUGIN_FILE\" >> ./fastlane/Pluginfile
+          
+          # fastlane FASTLANE_APP_FILE
+          echo FASTLANE_APP_FILE=\"$FASTLANE_APP_FILE\" >> ./fastlane/Appfile
+          
           # fastlane evn 파일 만듦
           echo FASTLANE_ENV=\"$FASTLANE_ENV\" >> ./fastlane/.env
 
