[ Refactor ] : 명시적 바이너리 경로 설정

--- a/.github/workflows/attandace-cd.yml
+++ b/.github/workflows/attandace-cd.yml
@@ -110,7 +110,7 @@ jobs:
           export GEM_HOME="$HOME/.gem"
           export PATH="$GEM_HOME/bin:$PATH"
           
-          bundle install
+          $GEM_HOME/bin/bundle install
 
       - name: Install Firebase app distribution plugin
         run: fastlane add_plugin firebase_app_distribution
