--- a/.github/workflows/attandace-cd.yml
+++ b/.github/workflows/attandace-cd.yml
@@ -74,15 +74,6 @@ jobs:
     needs: commit-message
     runs-on: ubuntu-latest
     steps:
-      - name: Install fastlane
-        run: gem install fastlane --user-install
-
-      - name: Install bundle
-        run: gem install bundler --user-install
-
-      - name: Add gem binary directory to PATH
-        run: echo "export PATH=\$HOME/.gem/ruby/3.0.0/bin:\$PATH" >> $GITHUB_ENV
-
       - name: Make env file
         run: |
           # fastlane 디렉토리 추가
@@ -102,6 +93,17 @@ jobs:
           
           # fastlane evn 파일 만듦
           echo FASTLANE_ENV=\"$FASTLANE_ENV\" >> ./fastlane/.env
+          
+      - name: Install fastlane
+        run: gem install fastlane --user-install
+        working-directory: ./fastlane
+
+      - name: Install bundle
+        run: gem install bundler --user-install
+        working-directory: ./fastlane
+
+      - name: Add gem binary directory to PATH
+        run: echo "export PATH=\$HOME/.gem/ruby/3.0.0/bin:\$PATH" >> $GITHUB_ENV
 
       - name: Set Gem environment variables
         run: |
