[ Fix ] : 누락된 깃헙 액션 키값 수정

--- a/.github/workflows/attandace-cd.yml
+++ b/.github/workflows/attandace-cd.yml
@@ -94,11 +94,12 @@ jobs:
           # fastlane evn 파일 만듦
           echo FASTLANE_ENV=\"$FASTLANE_ENV\" >> ./fastlane/.env
 
-      - name: set-up-ruby
-      - uses: actions/setup-ruby@v1
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
         with:
           ruby-version: "2.6"
 
+      - name: Install fastlane and bundler
         run: |
           gem install fastlane
           gem install bundler
