--- a/.github/workflows/attandace-cd.yml
+++ b/.github/workflows/attandace-cd.yml
@@ -22,6 +22,7 @@ jobs:
       KAKAO_NATIVE_API_KEY: ${{ secrets.KAKAO_NATIVE_API_KEY }}
       PLAY_STORE_API_KEY: ${{ secrets.GOOGLE_CLOUD_JSON }}
       FASTLANE_ENV: ${{ secrets.FASTLANE_ENV }}
+      FASTLANE_OPT_OUT_USAGE: true
     steps:
     - uses: actions/checkout@v2
     - name: set up JDK 11
@@ -110,7 +111,8 @@ jobs:
         working-directory: ./fastlane
 
       - name: Install Firebase app distribution plugin
-        run: fastlane add_plugin firebase_app_distribution
+        run: bundle exec fastlane add_plugin firebase_app_distribution
+
 
       - name: Fastlane debug
         run: fastlane distribute_debug "message:${{ needs.commit_message.outputs.message }}" --env common
