--- a/.github/workflows/attandace-cd.yml
+++ b/.github/workflows/attandace-cd.yml
@@ -111,7 +111,7 @@ jobs:
         working-directory: ./fastlane
 
       - name: Install Firebase app distribution plugin
-        run: bundle exec fastlane add_plugin firebase_app_distribution
+        run: fastlane add_plugin firebase_app_distribution
 
 
       - name: Fastlane debug
