[ Refactor ] : 루트디렉토리 변경

--- a/.github/workflows/attandace-cd.yml
+++ b/.github/workflows/attandace-cd.yml
@@ -104,7 +104,7 @@ jobs:
         run: |
           gem install fastlane
           gem install bundler
-#        working-directory: ./fastlane
+        working-directory: .
 
       - name: Run bundle install
         run: bundle install
