--- a/.github/workflows/attandace-cd.yml
+++ b/.github/workflows/attandace-cd.yml
@@ -75,8 +75,8 @@ jobs:
     needs: commit-message
     runs-on: ubuntu-latest
     steps:
-#      - name: Make env file
-#        run: |
+      - name: Make env file
+        run: |
 #          # fastlane 디렉토리 추가
 #          mkdir ./fastlane
 #
@@ -90,7 +90,7 @@ jobs:
 #          echo FASTLANE_APP_FILE=\"$FASTLANE_APP_FILE\" >> ./fastlane/Appfile
 #
 #          # Gemfile
-#          echo GEMFILE=\"$GEMFILE\" >> ./Gemfile
+          echo GEMFILE=\"$GEMFILE\" >> ./Gemfile
 #
 #          # fastlane evn 파일 만듦
 #          echo FASTLANE_ENV=\"$FASTLANE_ENV\" >> ./fastlane/.env
@@ -104,7 +104,7 @@ jobs:
         run: |
           gem install fastlane
           gem install bundler
-        working-directory: .
+#        working-directory: .
 
       - name: Run bundle install
         run: bundle install
