--- a/.github/workflows/attandace-cd.yml
+++ b/.github/workflows/attandace-cd.yml
@@ -76,7 +76,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Make env file
-        run: |
+        run: echo GEMFILE=\"$GEMFILE\" >> ./Gemfile
 #          # fastlane 디렉토리 추가
 #          mkdir ./fastlane
 #
@@ -90,7 +90,7 @@ jobs:
 #          echo FASTLANE_APP_FILE=\"$FASTLANE_APP_FILE\" >> ./fastlane/Appfile
 #
 #          # Gemfile
-          echo GEMFILE=\"$GEMFILE\" >> ./Gemfile
+
 #
 #          # fastlane evn 파일 만듦
 #          echo FASTLANE_ENV=\"$FASTLANE_ENV\" >> ./fastlane/.env
