[ Feature ] : 비 대화형 모드 실행 변경

--- a/.github/workflows/attandace-cd.yml
+++ b/.github/workflows/attandace-cd.yml
@@ -114,7 +114,7 @@ jobs:
 
 
       - name: Fastlane debug
-        run: fastlane distribute_debug "message:${{ needs.commit_message.outputs.message }}" --env common
+        run: fastlane distribute_debug "message:${{ needs.commit_message.outputs.message }}" --env common --non-interactive
         env:
           FASTLANE_OPT_OUT_USAGE: true
 #        working-directory: ./fastlane
