[ Feature ] : Gemfile 업데이트 로거 노출되지 않도록 수정 및 ui_interector 추가

--- a/.github/workflows/attandace-cd.yml
+++ b/.github/workflows/attandace-cd.yml
@@ -24,6 +24,12 @@ jobs:
       FASTLANE_ENV: ${{ secrets.FASTLANE_ENV }}
     steps:
     - uses: actions/checkout@v2
+
+    - name: Set up Ruby and allow Gemfile modifications
+      run: |
+        bundle config --local path vendor/bundle
+        bundle config --local bin vendor/bundle/bin
+
     - name: set up JDK 11
       uses: actions/setup-java@v2
       with:
