--- a/.github/workflows/attandace-cd.yml
+++ b/.github/workflows/attandace-cd.yml
@@ -97,29 +97,17 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: "3.2"
-
-      - name: Install fastlane and bundler
-        run: |
-          gem install fastlane
-          gem install bundler
-#        working-directory: .
+          ruby-version: "2.6"
 
       - name: Run bundle install
-        run: bundle install
-#        working-directory: ./fastlane
-
-      - name: Set up Ruby and allow Gemfile modifications
         run: |
-          bundle config --local path vendor/bundle
-          bundle config --local bin vendor/bundle/bin
-
-      - name: Install Firebase app distribution plugin
-        run: fastlane add_plugin firebase_app_distribution
+          bundle config path vendor/bundle
+          bundle install --jobs 4 --retry 3
+#        working-directory: ./fastlane
 
 
       - name: Fastlane debug
-        run: fastlane distribute_debug "message:${{ needs.commit_message.outputs.message }}" --env common --non-interactive
+        run: bundle exec fastlane distribute_debug "message:${{ needs.commit_message.outputs.message }}"
         env:
-          FASTLANE_OPT_OUT_USAGE: true
+          FIREBASE_APP_ID_DEBUG: ${{ secrets.FIREBASE_APP_ID }}
 #        working-directory: ./fastlane
