--- a/.github/workflows/attandace-cd.yml
+++ b/.github/workflows/attandace-cd.yml
@@ -78,6 +78,9 @@ jobs:
         with:
           ruby-version: "2.6"
 
+      - name: Update RubyGems
+        run: gem update --system 3.2.3
+
       - name: Cache Ruby - Bundler
         uses: actions/cache@v2
         with:
@@ -97,9 +100,10 @@ jobs:
         with:
           path: ~/.gradle/wrapper/
           key: cache-clean-wrapper-${{ matrix.os }}-${{ matrix.jdk }}
-          
+
       - name: Install bundle
         run: |
+          cd ${{ env.working-directory }}/fastlane
           bundle config path vendor/bundle
           bundle install --jobs 4 --retry 3
 
