--- a/.gitignore
+++ b/.gitignore
@@ -144,4 +144,4 @@ fabric.properties
 # End of https://www.toptal.com/developers/gitignore/api/androidstudio,macos
 yapp_attendance_keystore
 .github/api-play-store-key.json
-fastlane/.env
+.github/workflows/fastlane/.env
